// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Copyright should render correctly 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  background-color: rgba(34, 34, 34, 0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  margin: 0;
  left: 0;
}

<div>
  <p
    class="emotion-0 emotion-1"
    role="text"
  >
    Getty Images
  </p>
</div>
`;

exports[`Copyright should render correctly when passed prop position with value "right" 1`] = `
.emotion-0 {
  font-size: 0.75rem;
  line-height: 1rem;
  background-color: rgba(34, 34, 34, 0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  margin: 0;
  right: 0;
}

<div>
  <p
    class="emotion-0 emotion-1"
    role="text"
  >
    Getty Images
  </p>
</div>
`;
